# Health_statistic

./: CMakeLists.txt  bios.cpp  bios.h  dream.cpp  dream.h  dream_user.cpp  dream_user.h  dreamform.cpp  dreamform.h  dreamform.ui  exercise.cpp  exercise.h  exercise_meta.cpp  exercise_meta.h  exercise_model.cpp  exercise_model.h  exercisefactory.cpp  exercisefactory.h  foodchangeinfo.cpp  foodchangeinfo.h  foodchangeinfo.ui  foodform.cpp  foodform.h  foodform.ui  foodlist.cpp  foodlist.h  foodstatistics.cpp  foodstatistics.h  ideal_exercise_repository.cpp  ideal_exercise_repository.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messegefromdevs.cpp  messegefromdevs.h  messegefromdevs.ui  nutrition.ui  nutritionstrategieas.cpp  nutritionstrategieas.h  (+16 more)
